// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux-fluent E2E should add a todo 1`] = `
Object {
  "errors": Array [],
  "todos": Array [
    Object {
      "completed": false,
      "id": "first-todo-id",
    },
  ],
}
`;

exports[`redux-fluent E2E should delete a todo 1`] = `
Object {
  "errors": Array [],
  "todos": Array [
    Object {
      "completed": true,
      "id": "first-todo-id",
    },
  ],
}
`;

exports[`redux-fluent E2E should delete a todo 2`] = `
Object {
  "errors": Array [],
  "todos": Array [
    Object {
      "completed": true,
      "id": "first-todo-id",
    },
  ],
}
`;

exports[`redux-fluent E2E should delete a todo 3`] = `
Object {
  "errors": Array [],
  "todos": Array [],
}
`;
